🚀 Fix Vercel deployment: Update API config, dependencies and CORS handling
- Fixed API configuration for production environment detection
- Updated Flask/Werkzeug to compatible versions (2.3.x)
- Improved CORS handling for Vercel deployment
- Added proper error handling for production vs development
- Added API debugging functions
- Updated vercel.json with proper build configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb"
+      }
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -27,11 +36,13 @@
     }
   ],
   "env": {
-    "FLASK_ENV": "production"
+    "FLASK_ENV": "production",
+    "PYTHONPATH": "/var/task"
   },
   "functions": {
     "api/index.py": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
     }
   }
 }
